fixed overflow padding

--- a/public/src/scss/components/Dashboard/Home.scss
+++ b/public/src/scss/components/Dashboard/Home.scss
@@ -96,7 +96,7 @@
 		> .decks {
 			overflow-x: auto;
 			margin: 12px 0 15px 0;
-			padding: 0 0 15px 30px;
+			padding: 5px 30px 15px;
 			
 			> div {
 				display: flex;
